Address another stage time alignment issue

--- a/app/styles/app/layouts/jobs.scss
+++ b/app/styles/app/layouts/jobs.scss
@@ -95,10 +95,6 @@
     width: 13.7rem;
     padding-left: 0.3rem;
 
-    @media #{$xlarge-up} {
-      width: 11.675rem;
-    }
-
     svg {
       font-size: 15px;
     }
@@ -235,7 +231,7 @@
   }
 }
 
-.centered {
+.centered .jobs:not(.stage) {
   @media #{$xlarge-up} {
     .job-name {
       flex: 0 0 42em;
